--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -2,90 +2,87 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="include :: head('做题吧 - 首页')"></head>
 <body>
-<th:block th:include="include :: f_header"></th:block>
+<th:block th:include="include :: main_head"></th:block>
 <div class="layui-container">
-    <div class="layui-row">
-        <!-- 搜索区域 -->
-        <div class="search-section">
-            <div class="layui-carousel" id="banner">
-                <div carousel-item>
-                    <div th:each="top : ${tops}">
-                        <img th:src="${#strings.isEmpty(top.url)?'/images/none.png':top.url}" th:alt="${top.title}"/>
-                    </div>
+    <!-- 搜索区域 -->
+    <div class="layui-row search-section">
+        <div class="layui-carousel" id="banner">
+            <div carousel-item>
+                <div th:each="top : ${tops}">
+                    <img th:src="${#strings.isEmpty(top.url)?'/images/none.png':top.url}" th:alt="${top.title}"/>
                 </div>
             </div>
-            <div class="layui-col-md8 layui-col-md-offset2">
-                <div style="text-align: center; margin-bottom: 30px;">
-                    <h1 style="font-size: 28px; color: #333; margin-bottom: 20px;">探索知识，提升技能</h1>
-                    <p style="color: #666; font-size: 16px;">专业的IT技能学习平台，助力您的职业成长</p>
-                </div>
+        </div>
+        <div class="layui-col-md8 layui-col-md-offset2">
+            <div style="text-align: center; margin-bottom: 30px;">
+                <h1 style="font-size: 28px; color: #333; margin-bottom: 20px;">探索知识，提升技能</h1>
+                <p style="color: #666; font-size: 16px;">专业的IT技能学习平台，助力您的职业成长</p>
+            </div>
 
-                <div class="layui-row layui-card layui-form">
-                    <form class="layui-col-space10">
-                        <div class="layui-col-xs12 layui-col-sm10 layui-col-md10">
-                            <i class="layui-icon layui-icon-search index-icon-search"></i>
-                            <input type="text" name="title" class="layui-input index-input" placeholder="搜索答题室内容..."/>
-                            <button type="reset" class="layui-btn layui-btn-primary layui-btn-sm index-search">×</button>
-                        </div>
-                        <div class="layui-col-xs12 layui-col-sm2 layui-col-md2">
-                            <button class="layui-btn layui-btn-fluid layui-bg-purple" id="search" lay-submit lay-filter="search">
-                                <i class="layui-icon">&#xe615; 搜索</i>
-                            </button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <!-- 热门课程 -->
-        <div class="layui-col-md12">
-            <div class="section-title">
-                <span>热门课程</span>
-                <a th:href="@{/rooms}" class="layui-btn layui-btn-primary layui-btn-sm" style="float: right;">更多课程</a>
-            </div>
-        </div>
-        <div class="rooms layui-col-space20">
-            <div class="layui-col-md4 layui-col-sm6" th:each="room : ${rooms}" th:data-room-id="${room.id}">
-                <div class="layui-card" style="border: 1px solid #EEEEEE">
-                    <div class="layui-card-header" style="background: #E2E2E2; color: black;">
-                        <i class="layui-icon layui-icon-component"></i>
-                        <span th:text="${room?.title}">答题室标题</span>
-                        <span class="layui-badge" style="float: right;" th:text="${room?.timeMode==1?'限时答题':'永久有效'}">永久有效</span>
+            <div class="layui-row layui-card layui-form">
+                <form class="layui-col-space10">
+                    <div class="layui-col-xs12 layui-col-sm10 layui-col-md10">
+                        <i class="layui-icon layui-icon-search index-icon-search"></i>
+                        <input type="text" name="title" class="layui-input index-input" placeholder="搜索答题室内容..."/>
+                        <button type="reset" class="layui-btn layui-btn-primary layui-btn-sm index-search">×</button>
                     </div>
-                    <div class="layui-card-body fixed-content-height" th:with="util=${T(com.fit.util.DictRoomUtil)}">
-                        <div class="layui-col-xs8 layui-col-sm8 layui-col-md8 layui-room">
-                            <p class="content-area" th:text="${room?.content}">答题室内容</p>
-                            <span style="margin-top: 5px;" class="layui-badge layui-bg-green">进行中</span><br>
-                            <span class="layui-badge layui-bg-blue" th:text="${util.getDict(1, room?.examMode)}">标准答题</span><br>
-                            考试分类: <span style="color: #666; margin: 5px 0 0 10px;" th:text="${room?.subjectName}">考试分类</span><br>
-                            答题时间: <span class="layui-border-red" th:text="${room?.timeLen}">15</span>分钟<br>
-                        </div>
-                        <div class="layui-col-xs4 layui-col-sm4 layui-col-md4" style="text-align: center;">
-                            <img src="/images/zuotiba.png" width="95%"/>
-                        </div>
-                        <div class="layui-col-space5" style="margin-top: 10px;" th:classappend="${role==5?'layui-hide':''}">
-                            <hr/>
-                            <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
-                                <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-red">
-                                    <i class="layui-icon layui-icon-edit"></i> 阅卷
-                                </button>
-                            </div>
-                            <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
-                                <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-orange">
-                                    <i class="layui-icon layui-icon-file-b"></i> 报告
-                                </button>
-                            </div>
-                        </div>
-                        <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-purple">
-                            <i class="layui-icon layui-icon-play"></i> 进入答题室
+                    <div class="layui-col-xs12 layui-col-sm2 layui-col-md2">
+                        <button class="layui-btn layui-btn-fluid layui-bg-purple" id="search" lay-submit lay-filter="search">
+                            <i class="layui-icon">&#xe615; 搜索</i>
                         </button>
                     </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- 热门课程 -->
+    <div class="layui-col-md12">
+        <div class="section-title">
+            <span>热门课程</span>
+            <a th:href="@{/rooms}" class="layui-btn layui-btn-primary layui-btn-sm" style="float: right;">更多课程</a>
+        </div>
+    </div>
+    <div class="rooms layui-col-space20">
+        <div class="layui-col-md4 layui-col-sm6" th:each="room : ${rooms}" th:data-room-id="${room.id}">
+            <div class="layui-card" style="border: 1px solid #EEEEEE">
+                <div class="layui-card-header" style="background: #E2E2E2; color: black;">
+                    <i class="layui-icon layui-icon-component"></i>
+                    <span th:text="${room?.title}">答题室标题</span>
+                    <span class="layui-badge" style="float: right;" th:text="${room?.timeMode==1?'限时答题':'永久有效'}">永久有效</span>
+                </div>
+                <div class="layui-card-body fixed-content-height" th:with="util=${T(com.fit.util.DictRoomUtil)}">
+                    <div class="layui-col-xs8 layui-col-sm8 layui-col-md8 layui-room">
+                        <p class="content-area" th:text="${room?.content}">答题室内容</p>
+                        <span style="margin-top: 5px;" class="layui-badge layui-bg-green">进行中</span><br>
+                        <span class="layui-badge layui-bg-blue" th:text="${util.getDict(1, room?.examMode)}">标准答题</span><br>
+                        考试分类: <span style="color: #666; margin: 5px 0 0 10px;" th:text="${room?.subjectName}">考试分类</span><br>
+                        答题时间: <span class="layui-border-red" th:text="${room?.timeLen}">15</span>分钟<br>
+                    </div>
+                    <div class="layui-col-xs4 layui-col-sm4 layui-col-md4" style="text-align: center;">
+                        <img src="/images/zuotiba.png" width="95%"/>
+                    </div>
+                    <div class="layui-col-space5" style="margin-top: 10px;" th:classappend="${role==5?'layui-hide':''}">
+                        <hr/>
+                        <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+                            <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-red">
+                                <i class="layui-icon layui-icon-edit"></i> 阅卷
+                            </button>
+                        </div>
+                        <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+                            <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-orange">
+                                <i class="layui-icon layui-icon-file-b"></i> 报告
+                            </button>
+                        </div>
+                    </div>
+                    <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-purple">
+                        <i class="layui-icon layui-icon-play"></i> 进入答题室
+                    </button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!-- 底部信息 -->
-<th:block th:include="include :: f_footer"></th:block>
+<th:block th:include="include :: main_foot"></th:block>
 </body>
 <script>
     layui.use(['jquery', 'form', 'laypage'], function ($, form) {
