--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -19,6 +19,18 @@
     <script type="text/javascript">DD_belatedPNG.fix('*');</script><![endif]-->
     <script type="text/javascript" th:src="@{/js/lay-config.js}" th:if="${#request.servletPath.startsWith('/admin')}"></script>
     <script type="text/javascript" th:unless="${#request.servletPath.startsWith('/admin')}">
+        function layPage(id, count, curr, limit) {
+            layui.laypage.render({
+                elem: id, count: count, curr: curr || 1, limit: limit || 12, theme: '#B55AD0',
+                first: '首页', last: '尾页', prev: '<em>←</em>', next: '<em>→</em>', jump: function (obj, first) {
+                    if (!first) {
+                        console.log(window.location.pathname)
+                        // window.location.href = window.location.pathname
+                    }
+                }
+            });
+        }
+
         layui.use(['jquery', 'element', 'form', 'carousel', 'dropdown'], function ($, element, form, carousel, dropdown) {
             var pageMap = {
                 '/': 'home', '/index': 'home', '/index.html': 'home',
@@ -41,35 +53,7 @@
             // 重新渲染
             element.init();
             // 首页横幅
-            carousel.render({
-                elem: '#banner',
-                height: '300px',
-                width: '100%',
-                interval: 3000,
-                anim: 'fade',
-                arrow: 'hover',
-                indicator: 'outside'
-            });
-
-            function layPage(id, count, curr, limit) {
-                layui.laypage.render({
-                    elem: id,
-                    count: count,
-                    curr: curr || 1,
-                    limit: limit || 12,
-                    theme: '#B55AD0',
-                    first: '首页',
-                    last: '尾页',
-                    prev: '<em>←</em>',
-                    next: '<em>→</em>',
-                    jump: function (obj, first) {
-                        if (!first) {
-                            console.log(window.location.pathname)
-                            // window.location.href = window.location.pathname
-                        }
-                    }
-                });
-            }
+            carousel.render({elem: '#banner', height: '300px', width: '100%', interval: 3000, anim: 'fade', arrow: 'hover', indicator: 'outside'});
 
             function layOpen(title, url, lo_w, lo_h) {
                 lo_w = typeof lo_w === 'undefined' ? '50%' : lo_w;
@@ -124,7 +108,7 @@
                 $("body").addClass("mobile-nav-show").css("overflow", "hidden");
                 $("#mobile-menu").removeClass('layui-icon-spread-left').addClass('layui-icon-shrink-right');
             })
-            $(".mobile-shade").click(function () {
+            $(".site-mobile-shade").click(function () {
                 $("body").removeClass("mobile-nav-show").css("overflow", "auto");
                 $("#mobile-menu").removeClass('layui-icon-shrink-right').addClass('layui-icon-spread-left');
             });
@@ -184,9 +168,9 @@
     <div class="site-mobile-shade"></div>
 </div>
 
-<div th:fragment="f_header">
-    <div id="mainNav" class="layui-header">
-        <div class="layui-container">
+<div th:fragment="main_head">
+    <header id="mainNav" class="layui-header">
+        <div class="layui-row">
             <div class="mobile-logo"><img th:src="@{/images/logo.png}" alt="logo"/> 做题吧</div>
             <div class="mobile-header-more">
                 <i id="mobile-menu" class="layui-icon layui-icon-spread-left"></i>
@@ -237,49 +221,45 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </header>
 </div>
 
-<div th:fragment="f_footer">
+<div th:fragment="main_foot">
     <div class="index-footer">
-        <div class="layui-container layui-row" style="margin-bottom:15px;">
-            <div class="layui-col-md6">
-                <div class="layui-font-20">
-                    <img class="logo-footer" src="/images/logo.png" alt="logo"/>
-                    做题吧平台
-                </div>
-                <div class="layui-font-14" style="color: #bdc3c7; line-height: 1.6; margin: 10px 40px 10px 0;">
-                    专注于提供高质量的在线做题平台，帮助您实现成长。我们致力于为用户提供最优质的学习体验。
-                </div>
+        <div class="layui-col-md5 layui-col-md-offset1 layui-col-xs-offset1">
+            <div class="layui-font-20">
+                <img class="logo-footer" src="/images/logo.png" alt="logo"/> 做题吧平台
             </div>
-            <div class="layui-col-md6">
-                <div class="layui-col-xs4 layui-col-sm4 layui-col-md4">
-                    <div class="layui-font-16">学习资源</div>
-                    <div class="layui-font-14">
-                        <a href="/rooms" style="color: #bdc3c7;display: block;margin: 0 15px 10px 0;">课程中心</a>
-                        <a href="/learns" style="color: #bdc3c7;display: block;margin: 0 15px 10px 0;">知识库</a>
-                    </div>
-                </div>
-                <div class="layui-col-xs4 layui-col-sm4 layui-col-md4">
-                    <div class="layui-font-16">服务支持</div>
-                    <div class="layui-font-14">
-                        <a href="#" style="color: #bdc3c7;display: block;margin: 0 15px 10px 0;">帮助中心</a>
-                        <a href="#" style="color: #bdc3c7;display: block;margin: 0 15px 10px 0;">常见问题</a>
-                        <a href="#" style="color: #bdc3c7;display: block;margin: 0 15px 10px 0;">联系我们</a>
-                    </div>
-                </div>
-                <div class="layui-col-xs4 layui-col-sm4 layui-col-md4">
-                    <div class="layui-font-16">关于我们</div>
-                    <div class="layui-font-14">
-                        <a href="#" style="color: #bdc3c7;display: block;margin: 0 15px 10px 0;">公司介绍</a>
-                        <a href="#" style="color: #bdc3c7;display: block;margin: 0 15px 10px 0;">加入我们</a>
-                        <a href="#" style="color: #bdc3c7;display: block;margin: 0 15px 10px 0;">隐私政策</a>
-                    </div>
-                </div>
+            <div class="layui-font-14" style="color: #bdc3c7; line-height: 1.6; margin: 10px 40px 10px 0;">
+                专注于提供高质量的在线做题平台，帮助您实现成长。我们致力于为用户提供最优质的学习体验。
             </div>
-            <th:block th:include="include :: footer"></th:block>
         </div>
+        <div class="layui-col-md5 layui-col-md-offset1 layui-col-xs-offset1">
+            <div class="layui-col-xs4 layui-col-sm4 layui-col-md4">
+                <div class="layui-font-16">学习资源</div>
+                <div class="layui-font-14">
+                    <a href="/rooms">课程中心</a>
+                    <a href="/learns">知识文库</a>
+                </div>
+            </div>
+            <div class="layui-col-xs4 layui-col-sm4 layui-col-md4">
+                <div class="layui-font-16">服务支持</div>
+                <div class="layui-font-14">
+                    <a href="#">帮助中心</a>
+                    <a href="#">常见问题</a>
+                    <a href="#">联系我们</a>
+                </div>
+            </div>
+            <div class="layui-col-xs4 layui-col-sm4 layui-col-md4">
+                <div class="layui-font-16">关于我们</div>
+                <div class="layui-font-14">
+                    <a href="#">公司介绍</a>
+                    <a href="#">加入我们</a>
+                    <a href="#">隐私政策</a>
+                </div>
+            </div>
+        </div>
+        <th:block th:include="include :: footer"></th:block>
     </div>
-    <div class="mobile-shade" th:alt="移动端遮罩"></div>
 </div>
 </html>
