--- a/src/main/resources/templates/front/room.html
+++ b/src/main/resources/templates/front/room.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="include :: head('做题吧 - 答题室')"></head>
-<body>
+<body class="layui-layout">
 <th:block th:include="include :: main_head"></th:block>
 <div class="layui-container">
     <div class="layui-row layui-col-space20" th:with="util=${T(com.fit.util.DictRoomUtil)}">
