--- a/src/main/resources/templates/front/comment.html
+++ b/src/main/resources/templates/front/comment.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="include :: head('做题吧 - 首页')"></head>
-<body>
+<body class="layui-layout">
 <th:block th:include="include :: main_head"></th:block>
 <div class="layui-container">
     <div class="layui-card">
