--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="include :: head('做题吧 - 首页')"></head>
-<body>
+<body class="layui-layout">
 <th:block th:include="include :: main_head"></th:block>
 <div class="layui-container">
     <!-- 搜索区域 -->
@@ -36,47 +36,47 @@
         </div>
     </div>
     <!-- 热门课程 -->
-    <div class="layui-col-md12">
+    <div class="layui-row">
         <div class="section-title">
             <span>热门课程</span>
             <a th:href="@{/rooms}" class="layui-btn layui-btn-primary layui-btn-sm" style="float: right;">更多课程</a>
         </div>
-    </div>
-    <div class="rooms layui-col-space20">
-        <div class="layui-col-md4 layui-col-sm6" th:each="room : ${rooms}" th:data-room-id="${room.id}">
-            <div class="layui-card" style="border: 1px solid #EEEEEE">
-                <div class="layui-card-header" style="background: #E2E2E2; color: black;">
-                    <i class="layui-icon layui-icon-component"></i>
-                    <span th:text="${room?.title}">答题室标题</span>
-                    <span class="layui-badge" style="float: right;" th:text="${room?.timeMode==1?'限时答题':'永久有效'}">永久有效</span>
-                </div>
-                <div class="layui-card-body fixed-content-height" th:with="util=${T(com.fit.util.DictRoomUtil)}">
-                    <div class="layui-col-xs8 layui-col-sm8 layui-col-md8 layui-room">
-                        <p class="content-area" th:text="${room?.content}">答题室内容</p>
-                        <span style="margin-top: 5px;" class="layui-badge layui-bg-green">进行中</span><br>
-                        <span class="layui-badge layui-bg-blue" th:text="${util.getDict(1, room?.examMode)}">标准答题</span><br>
-                        考试分类: <span style="color: #666; margin: 5px 0 0 10px;" th:text="${room?.subjectName}">考试分类</span><br>
-                        答题时间: <span class="layui-border-red" th:text="${room?.timeLen}">15</span>分钟<br>
+        <div class="rooms">
+            <div class="layui-col-md4 layui-col-sm6" th:each="room : ${rooms}" th:data-room-id="${room.id}">
+                <div class="layui-card" style="border: 1px solid #EEEEEE">
+                    <div class="layui-card-header" style="background: #E2E2E2; color: black;">
+                        <i class="layui-icon layui-icon-component"></i>
+                        <span th:text="${room?.title}">答题室标题</span>
+                        <span class="layui-badge" style="float: right;" th:text="${room?.timeMode==1?'限时答题':'永久有效'}">永久有效</span>
                     </div>
-                    <div class="layui-col-xs4 layui-col-sm4 layui-col-md4" style="text-align: center;">
-                        <img src="/images/zuotiba.png" width="95%"/>
-                    </div>
-                    <div class="layui-col-space5" style="margin-top: 10px;" th:classappend="${role==5?'layui-hide':''}">
-                        <hr/>
-                        <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
-                            <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-red">
-                                <i class="layui-icon layui-icon-edit"></i> 阅卷
-                            </button>
+                    <div class="layui-card-body fixed-content-height" th:with="util=${T(com.fit.util.DictRoomUtil)}">
+                        <div class="layui-col-xs8 layui-col-sm8 layui-col-md8 layui-room">
+                            <p class="content-area" th:text="${room?.content}">答题室内容</p>
+                            <span style="margin-top: 5px;" class="layui-badge layui-bg-green">进行中</span><br>
+                            <span class="layui-badge layui-bg-blue" th:text="${util.getDict(1, room?.examMode)}">标准答题</span><br>
+                            考试分类: <span style="color: #666; margin: 5px 0 0 10px;" th:text="${room?.subjectName}">考试分类</span><br>
+                            答题时间: <span class="layui-border-red" th:text="${room?.timeLen}">15</span>分钟<br>
                         </div>
-                        <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
-                            <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-orange">
-                                <i class="layui-icon layui-icon-file-b"></i> 报告
-                            </button>
+                        <div class="layui-col-xs4 layui-col-sm4 layui-col-md4" style="text-align: center;">
+                            <img src="/images/zuotiba.png" width="95%"/>
                         </div>
+                        <div class="layui-col-space5" style="margin-top: 10px;" th:classappend="${role==5?'layui-hide':''}">
+                            <hr/>
+                            <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+                                <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-red">
+                                    <i class="layui-icon layui-icon-edit"></i> 阅卷
+                                </button>
+                            </div>
+                            <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+                                <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-orange">
+                                    <i class="layui-icon layui-icon-file-b"></i> 报告
+                                </button>
+                            </div>
+                        </div>
+                        <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-purple">
+                            <i class="layui-icon layui-icon-play"></i> 进入答题室
+                        </button>
                     </div>
-                    <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-purple">
-                        <i class="layui-icon layui-icon-play"></i> 进入答题室
-                    </button>
                 </div>
             </div>
         </div>
